# resources/views/auth/reset.blade.php
@@ -1,50 +1,61 @@
 @extends('layouts.app')
 
 @section('content')
-<div class="container mx-auto px-4">
-    <div class="flex justify-center">
-        <div class="w-full max-w-md">
-            <div class="bg-white dark:bg-gray-800 shadow-md rounded px-8 pt-6 pb-8 mb-4">
-                <div class="mb-4 text-lg font-semibold text-gray-800 dark:text-gray-200">{{ __('Reset Password') }}</div>
+<section class="bg-gray-50 dark:bg-gray-900">
+    <div class="flex flex-col items-center justify-center px-6 py-8 mx-auto md:h-screen lg:py-0">
+        <a href="{{ config('app.url') }}" class="flex flex-col items-center mb-6 text-2xl font-semibold text-gray-900 dark:text-white">
+            <img class="w-50 h-50" src="{{ asset('img/Logo.svg') }}" alt="Logo">
+        </a>
+        <div
+            class="w-full p-6 bg-white rounded-lg shadow dark:border md:mt-0 sm:max-w-md dark:bg-gray-800 dark:border-gray-700 sm:p-8">
+            <h2 class="mb-1 text-xl font-bold leading-tight tracking-tight text-gray-900 md:text-2xl dark:text-white">
+                @lang('Change Password')
+            </h2>
 
-                {{ session('success') }}
+            <form class="mt-4 space-y-4 lg:mt-5 md:space-y-5" :action="url('/api/v1/auth/reset-password')">
+                @csrf
+                <input type="hidden" name="reset_token" value="{{ $reset_token }}">
 
-                @if (session('success'))
-                    <div class="bg-green-100 dark:bg-green-200 border border-green-400 text-green-700 dark:text-green-800 px-4 py-3 rounded relative mb-4" role="alert">
-                        {{ session('success') }}
-                    </div>
-                @elseif (session('auth_error'))
-                    <div class="bg-red-100 dark:bg-red-200 border border-red-400 text-red-700 dark:text-red-800 px-4 py-3 rounded relative mb-4" role="alert">
-                        {{ session('error') }}
-                    </div>
-                @else
-                    <form method="POST" action="{{ url('/api/v1/auth/reset-password') }}">
-                        @csrf
-                        
-                        <input type="hidden" name="reset_token" value="{{ $reset_token }}">
-
-                        <div class="mb-4">
-                            <label for="password" class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2">{{ __('Password') }}</label>
-                            <input id="password" type="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 dark:text-gray-300 leading-tight focus:outline-none focus:shadow-outline @error('password') border-red-500 @enderror" name="password" required autocomplete="new-password">
-                            @error('password')
-                                <p class="text-red-500 text-xs italic mt-2">{{ $message }}</p>
-                            @enderror
-                        </div>
-
-                        <div class="mb-4">
-                            <label for="password-confirmation" class="block text-gray-700 dark:text-gray-300 text-sm font-bold mb-2">{{ __('Confirm Password') }}</label>
-                            <input id="password-confirmation" type="password" class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 dark:text-gray-300 leading-tight focus:outline-none focus:shadow-outline" name="password_confirmation" required autocomplete="new-password">
-                        </div>
-
-                        <div class="flex items-center justify-between">
-                            <button type="submit" class="bg-blue-500 hover:bg-blue-700 text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline">
-                                {{ __('Reset Password') }}
-                            </button>
-                        </div>
-                    </form>
-                @endif
-            </div>
+                <div>
+                    <label for="email" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        @lang('Your email')
+                    </label>
+                    <input type="email" name="email" id="email"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        placeholder="{{ $user_email }}" readonly>
+                    @error('email')
+                        <p class="text-red-500 text-xs italic mt-2">{{ $message }}</p>
+                    @enderror
+                </div>
+                <div>
+                    <label for="password" class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        @lang('New Password')
+                    </label>
+                    <input type="password" name="password" id="password" placeholder="••••••••"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        required>
+                    @error('password')
+                        <p class="text-red-500 text-xs italic mt-2">{{ $message }}</p>
+                    @enderror
+                </div>
+                <div>
+                    <label for="password-confirmation"
+                        class="block mb-2 text-sm font-medium text-gray-900 dark:text-white">
+                        @lang('Confirm Password')
+                    </label>
+                    <input type="password" name="password-confirmation" id="password-confirmation" placeholder="••••••••"
+                        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-primary-600 focus:border-primary-600 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+                        required>
+                    @error('password-confirmation')
+                        <p class="text-red-500 text-xs italic mt-2">{{ $message }}</p>
+                    @enderror
+                </div>
+                <button type="submit"
+                    class="w-full text-white bg-primary-600 hover:bg-primary-700 focus:ring-4 focus:outline-none focus:ring-primary-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center dark:bg-primary-600 dark:hover:bg-primary-700 dark:focus:ring-primary-800">
+                    @lang('Reset Password')
+                </button>
+            </form>
         </div>
     </div>
-</div>
+</section>
 @endsection
