# resources/views/email/forgot-password.blade.php
@@ -1,5 +1,5 @@
 <x-mail::message>
-# @lang('Hello') {{ $user->name }},
+# @lang('Hello') {{ $user_name }},
 
 @lang('You are receiving this email because we received a password reset request for your account.')
 
@@ -7,7 +7,7 @@
 @lang('Reset Password')
 </x-mail::button>
 
-@lang('If you did not request a password reset, no further action is required.')
+@lang('If you did not request a password reset, no further action is required.')<br>
 
 @lang('Regards,')  
 @lang('The :name Team', ['name' => config('app.name')])
